welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:1: error: '(' expected but identifier found.
for compteurtour(<-1 to 7) {avance()
    ^Runner:25: error: illegal start of simple expression
	}
        ^